service-nginx.yml
kind: Service
apiVersion: v1
metadata:
   name: kubeserve-svc
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 80
  selector:
    run: nginx-main
