ingress-resource-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-1
spec:
  rules:
          #  - host: nginx.example.com
   - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubeserve-svc
            port: 
              number: 8080
